<resources>
    <string name="app_name">图说</string>
    <string name="title_activity_welcome">欢迎页</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">图说</string>
    <string name="title_activity_image_detail">图片详情</string>

    <!-- 可爱类 -->
    <string-array name="tag_lovely_array">
        <item>清纯</item>
        <item>可爱</item>
        <item>素颜</item>
        <item>校花</item>
        <item>萝莉</item>
        <item>甜素纯</item>
        <item>小清新</item>
        <item>甜美</item>
        <item>青春</item>
    </string-array>

    <!-- 高贵类 -->
    <string-array name="tag_nobility_array">
        <item>长发</item>
        <item>女神</item>
        <item>气质</item>
        <item>时尚</item>
        <item>日本</item>
        <item>韩国</item>
        <item>礼服</item>
        <item>私房</item>
        <item>街拍</item>
        <item>日韩</item>
    </string-array>

    <!-- 性感类 -->
    <string-array name="tag_sexy_array">
        <item>性感</item>
        <item>少妇</item>
        <item>丰满</item>
        <item>浴室</item>
        <item>短裙</item>
        <item>丝袜</item>
        <item>大胸</item>
        <item>内衣</item>
        <item>唯美</item>
    </string-array>

    <string-array name="tag_array">
        <item>性感</item>
        <item>可爱</item>
        <item>高贵</item>
    </string-array>

    <string name="set_wallpaper">松开设置壁纸</string>
    <string name="collect_wallpaper">松开收藏壁纸</string>
    <string name="dis_collect_wallpaper">松开取消收藏壁纸</string>
    <string name="start_setting_wallpaper">正在设置壁纸</string>
    <string name="set_wallpaper_succeed">设置壁纸成功</string>
    <string name="collect_wallpaper_succeed">收藏成功</string>
    <string name="dis_collect_succeed">取消收藏成功</string>
    <string name="set_wallpaper_failure">设置壁纸失败</string>
    <string name="collect_wallpaper_failure">收藏壁纸失败</string>
    <string name="click_again_exit">双击壁纸两次可以关闭当前页面</string>
    <string name="load_all">图片已经全部加载</string>

    <string name="tag_me">我的</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_download">我的下载</string>
    <string name="about_us">软件介绍</string>
    <string name="star_me">给应用评5星，解锁更多性感图</string>
    <string name="feedback">我要吐槽</string>
    <string name="setting">设置</string>
    <string name="no_collect">无收藏</string>
    <string name="no_download">无下载</string>

    <string name="download_wallpaper_start">开始下载壁纸</string>
    <string name="download_wallpaper_succeed">下载完成</string>
    <string name="download_wallpaper_failed">下载失败</string>

    <string name="setting_next_action">下次进入应用生效</string>
    <string name="setting_auto_set_wallpaper_succeed">自动轮播设置成功</string>
    <string name="feedback_content_hint">请告诉我您想让我改进的地方或者吐槽的问题</string>
    <string name="feedback_contact_hint">如果方便，留下您的邮箱地址,修复问题我会第一时间通知你</string>
    <string name="send_feedback">发射吐槽</string>

    <string name="network_dis_connect">网络好像没有开</string>
    <string name="content_empty">吐槽内容好像还没有</string>
    <string name="contact_not_correct">请输入正确的Email</string>
    <string name="sending">发送中</string>
    <string name="send_failure">发送失败</string>
    <string name="send_succeed">发送成功</string>

    <string-array name="about_us_question_title">
        <item>1.进入图片详情页面，怎么设置壁纸、下载壁纸、收藏壁纸？</item>
        <item>2.下载后的图片在哪里?</item>
        <item>3.怎么自定义页面的滑动效果?</item>
        <item>4.我觉得这款软件太烂了，想吐槽，怎么让开发者知道？</item>
    </string-array>
    <string-array name="about_us_question_description">
        <item>上下滑动图片到不能滑动，松开，即可设置壁纸、收藏壁纸；\n点击图片，顶部菜单栏出现，点击下载图标即可下载壁纸，再次图片，关闭顶部菜单栏</item>
        <item>下载后的图片保存目录是SD(部分手机为手机存储)/Android/data/com.gpc.meinvxiupro/files/Pictures下</item>
        <item>进入风格设置页面，选择页面滑动风格，关闭app下次进入即可体验不同的页面滑动风格</item>
        <item>进入我要吐槽页面，写下你想让开发者改进的内容，我会第一时间联系您，并在后续版本迭代中改进</item>
    </string-array>

    <string name="page_style">页面切换动画</string>
    <string-array name="page_style_key">
        <item>DefaultTransformer</item>
        <item>AccordionTransformer</item>
        <item>BackgroundToForegroundTransformer</item>
        <item>DepthPageTransformer</item>
        <item>ForegroundToBackgroundTransformer</item>
        <item>RotateDownTransformer</item>
        <item>RotateUpTransformer</item>
        <item>ScaleInOutTransformer</item>
        <item>StackTransformer</item>
        <item>TabletTransformer</item>
        <item>ZoomInTransformer</item>
        <item>ZoomOutTransformer</item>
        <item>ZoomOutSlideTransformer</item>
    </string-array>
    <string-array name="page_style_content">
        <item>默认</item>
        <item>手风琴</item>
        <item>背景到前景</item>
        <item>深度页</item>
        <item>前景到背景</item>
        <item>向下旋转</item>
        <item>向上旋转</item>
        <item>缩小放大</item>
        <item>堆</item>
        <item>盒子</item>
        <item>缩小</item>
        <item>放大</item>
        <item>放大滑动</item>
    </string-array>

    <string name="auto_set_download_wallpaper">自动轮播下载壁纸</string>
    <string-array name="auto_set_download_wallpaper_key">
        <item>0</item>
        <item>8000</item>
        <item>30000</item>
        <item>60000</item>
        <item>180000</item>
        <item>600000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>14400000</item>
        <item>28800000</item>
        <item>43200000</item>
        <item>86400000</item>
    </string-array>
    <string-array name="auto_set_download_wallpaper_content">
        <item>关闭</item>
        <item>8秒</item>
        <item>30秒</item>
        <item>1分钟</item>
        <item>3分钟</item>
        <item>10分钟</item>
        <item>30分钟</item>
        <item>1小时</item>
        <item>4小时</item>
        <item>8小时</item>
        <item>12小时</item>
        <item>24小时</item>
    </string-array>
</resources>
