<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/rgb_f8f8f8">

    <include
        android:id="@+id/home_toolbar"
        layout="@layout/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <android.support.v7.widget.CardView
        android:id="@+id/feedback_content_card"
        android:layout_width="match_parent"
        android:layout_height="160dip"
        android:layout_below="@id/home_toolbar"
        android:layout_margin="5dp"
        android:background="@color/rgb_e9e9e9"
        card_view:cardCornerRadius="4dp">

        <EditText
            android:id="@+id/feedback_content"
            style="@style/EditStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:hint="@string/feedback_content_hint" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/feedback_contact_card"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_below="@id/feedback_content_card"
        android:layout_margin="5dp"
        android:background="@color/rgb_e9e9e9"
        card_view:cardCornerRadius="4dp">

        <EditText
            android:id="@+id/feedback_contact"
            style="@style/EditStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/feedback_contact_hint" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/send_feedback"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/bg_shape_btn"
        android:gravity="center"
        android:text="@string/send_feedback"
        android:textSize="@dimen/text_large1" />
</RelativeLayout>